# systems-integration

./: .gitignore  LICENSE  README.md
.pipeline/: config.yml
lab/: complex-system-landscape.md  connect-to-integration-suit.md  file-transfer.md  integration-suite.md  messaging.md  mini-erp.md  rpc.md  simple-web-shop.md
lectures/: enterprise-integration-patterns-details.md  enterprise-integration-patterns.md  exchange-formats.md  integration-styles.md  mapping-languages.md  motivation.md  protocols.md  query-languages.md  reliability-performance.md
lectures/imgs/: .$01-motivation-boxes.drawio.png.bkp
src/notebooks/: pyproject.toml  reliability.ipynb
src/simple-erp/: .gitignore  README.md  mta.yaml  package-lock.json  package.json  xs-security-api.json  xs-security.json
src/simple-erp/_i18n/: i18n.properties
src/simple-erp/app/: services.cds
src/simple-erp/app/customers/: README.md  annotations.cds  package-lock.json  package.json  ui5-deploy.yaml  ui5.yaml
src/simple-erp/app/orders/: README.md  annotations.cds  field-control.cds  package-lock.json  package.json  ui5-deploy.yaml  ui5.yaml
src/simple-erp/app/products/: README.md  annotations.cds  mta.yaml  (+5 more)
src/simple-erp/db/: schema.cds  simpleerp-schema.cds
src/simple-erp/srv/: erp-service.cds  simpleerp-api.cds  simpleerp-api.js  simpleerp-service.cds  simpleerp-service.js  simpleerp.js  simpleerpui-service.cds  simpleerpui-service.js
src/simple-erp/test/: requests.http
src/terraform/: .gitignore  integration-suite-trial.tf  provider.tf  sample.tfvars  variables.tf
term-paper/: term-paper.md
(+42 files in other folders)
