[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Christian Drumm <christian.drumm@hey.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.0"
jupyterlab = "^4.3.3"
matplotlib = "^3.9.3"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
